[tool.poetry]
name = "bank-widget"
version = "0.1.0"
description = "Bank widget backend for displaying client operations"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.lint.dependencies]
flake8 = "^6.1.0"
black = "^23.12.1"
isort = "^5.13.2"
mypy = "^1.8.0"

[tool.black]
line-length = 119
exclude = ".git"

[tool.isort]
line_length = 119
multi_line_output = 0
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
lines_after_imports = 2

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = ["venv"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
